Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18188

[Reg] Contexts created with QScriptEngine::pushContext() are not clean

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.0.0
    • 4.7.2
    • Qt Script
    • None
    • Fedora
    • 68458376c0db2f786b2c9ab3b8dfd21695a5645e

      Properties added to the activation object of a context or to a scope object pushed to this context should not leak to a new context created with QSE::pushContext().

      This was the behavior in the "classic QtScript engine", tested with Qt 4.5.3, small test program attached.

        For Gerrit Dashboard: QTBUG-18188
        # Subject Branch Project Status CR V

            kenthans Kent Hansen (Inactive)
            cmarcelo Caio Marcelo de Oliveira Filho
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes